Fix CSS spacing in followers you know

--- a/app/javascript/flavours/glitch/styles/components.scss
+++ b/app/javascript/flavours/glitch/styles/components.scss
@@ -8466,7 +8466,7 @@ noscript {
     display: flex;
     align-items: center;
     gap: 10px;
-    margin-block-end: 16px;
+    margin-block-start: 16px;
     color: $darker-text-color;
 
     a:any-link {
